# proyectoufc

./: README.md  pyproject.toml
00-data/raw/: fights.csv
01-scripts/: 01-init-db.sql  02-insert-initial-data.sql  03-analyze-methods.py  04-plot-methods.py  05-data-quality.py  get_victory_methods.sql  test_db.py
02-docs/: arquitectura.md  diccionario_datos.md  guia_instalacion.md
03-reports/data_quality/: informe_calidad_fights.md
98-tests/: test_loader.py
99-notebooks/: 01-exploracion-inicial.ipynb  02-feature-engineering.ipynb
src/mma_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mma_project/data/: loader.py
src/mma_project/db/: connection.py  loader.py
src/mma_project/models/: train.py
