[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mma_project"
version = "0.1.0"
description = "Análisis de métodos de victoria por categoría de peso en MMA"
dependencies = [
    "pandas>=2.0.0,<3",
    "numpy>=1.24.0,<2",
    "matplotlib>=3.10,<4",
    "ipykernel>=6.0,<7",
    "SQLAlchemy>=2.0,<3",
    "duckdb>=0.10.0",
    "duckdb-engine"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "scripts", "notebooks"]
