[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mma_project"
version = "0.1.0"
description = "Análisis avanzado de datos de la UFC con arquitectura ELT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Dependencias exactas de la rúbrica
    "pandas>=3.0",
    "numpy>=2.4",
    "scikit-learn>=1.8",
    "matplotlib>=3.10",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pyarrow>=23.0",
    # Nuestras dependencias base para la BD
    "SQLAlchemy>=2.0",
    "duckdb>=0.10.0",
    "duckdb-engine", # Para que corran los Jupyter Notebooks
    "ipykernel",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    # Herramientas de calidad exigidas
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.1",
    "mypy>=1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "01-scripts", "99-notebooks"]

# Configuración básica para el formateador de código
[tool.ruff]
line-length = 88
